# kosmos

./: .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/kosmos-native/: .eslintrc.json  next.config.js  package.json
apps/kosmos-native/src-tauri/: Cargo.toml  tauri.conf.json
apps/kosmos-native/src/app/: globals.css  layout.tsx  page.tsx
apps/kosmos-native/src/components/PipelineGraph/: index.tsx  state.ts
apps/kosmos-native/src/components/PipelineGraph/PipelineNode/: constants.ts  index.tsx
apps/kosmos-native/src/components/ProcedureTray/: state.ts
crates/kosmos-builtins/: Cargo.toml
crates/kosmos-builtins/assets/: preamble.wgsl  random.wgsl  simplex.wgsl
crates/kosmos-builtins/src/: lib.rs
crates/kosmos-pipeline/: Cargo.toml
crates/kosmos-pipeline/src/: lib.rs
crates/kosmos-renderer/: Cargo.toml  package.json
crates/kosmos-renderer/src/: lib.rs
crates/kosmos-wasm/: Cargo.toml
