[package]
name = "kosmos-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"	

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
	"multi-threaded",
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_gizmos",
	"bevy_pbr",
	"bevy_render",
	"bevy_scene",
	"png",
	"hdr"
] 

[lib]
crate-type = ["cdylib"]
